--- a/index.css
+++ b/index.css
@@ -1,28 +1,31 @@
-*{
+* {
     margin: o;
     padding: o;
     box-sizing: border-box;
     font-size: sans-serif;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-.logo img{
+
+.logo img {
     border-radius: 50%;
 }
 
-body{
+body {
     background: #ccc;
     text-align: center;
     /* align-items: center; */
     /* min-height: 100vh; */
 }
-nav{
+
+nav {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background:#ccc;
+    background: #ccc;
 
 }
-nav a{
+
+nav a {
     position: relative;
     font-size: 1em;
     font-weight: 500;
@@ -31,10 +34,12 @@ nav a{
     padding: 6px 20px;
     transition: .5s;
 }
-nav a:hover{
+
+nav a:hover {
     color: rgb(18, 143, 97);
 }
-nav a span{
+
+nav a span {
     position: absolute;
     top: 0;
     left: 0;
@@ -46,54 +51,54 @@ nav a span{
     opacity: o;
     transition: .5s;
 }
-nav a:hover span{
+
+nav a:hover span {
     transform: scale(1) translate v(50px);
     opacity: 1;
 }
 
 
 /* main-cont */
-.main-cont{
+.main-cont {
     padding: 1rem 10rem;
 }
-.intro{
-background-image: url(./images/image1.jpg);
-    height: 50lvh;
+
+.intro {
+    background-image: url(./images/image1.jpg);
+    height: 80lvh;
     width: 100%;
-    color:#fff;
+    color: #fff;
     text-align: center;
     justify-content: center;
-    margin-top: 2rem;
-    transition: 1s;
+    cursor: pointer;
+    border-radius: 5px;
+    background-position: center;
+    background-size: cover;
 }
-.intro:hover{
-padding:2rem 4rem;
-background-size: cover;
-background-position: center;
-border-radius: 10px;
-width: 100%;
-height: 70lvh;
-}
-.intro-text{
+.intro-text {
     padding-top: 10%;
 }
-.intro h2{
+
+.intro h2 {
     /* display: block; */
 }
 
-.img-text{
-    display:flex;
+.img-text {
+    display: flex;
     align-items: center;
     justify-content: space-between;
     margin-top: 1rem;
 }
-.text p{
+
+.text p {
     text-align: start;
 }
-.img img{
+
+.img img {
     /* border-radius: 10px; */
 }
-.text button{
+
+.text button {
     padding: 0.5rem 4rem;
     background: rgb(18, 143, 97);
     outline: none;
@@ -104,53 +109,65 @@ height: 70lvh;
     font-size: 20px;
     transition: 1s;
 }
-.text button:hover{
+
+.text button:hover {
     background: #141414;
 }
-.cards{
+
+.cards {
     margin-top: 3rem;
     display: grid;
-    grid-template-columns: repeat(3,auto);
+    grid-template-columns: repeat(3, auto);
     gap: 3rem;
 }
+
 .card1,
 .card2,
-.card3{
+.card3 {
     border: 1px solid #ccc;
     padding: 1rem 2rem;
     background: #ffffff;
     height: 600px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.4);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
     border-radius: 5px;
 }
-.card1{
+
+.card1 {
     grid-column: span 1;
-}.card2{
+}
+
+.card2 {
     grid-column: span 1;
-}.card3{
+}
+
+.card3 {
     grid-column: span 1;
 }
 
 /* trainings  */
-.train1{
+.train1 {
     display: flex;
     flex-basis: 100%;
     margin-top: 5rem;
 }
-.train1-img{
+
+.train1-img {
     flex-basis: 50%;
     border-radius: 8px;
-    box-shadow: 0 0 5px rgba(0,0,0,0.4);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
 
 }
-.train1-text{
+
+.train1-text {
     flex-basis: 50%;
     margin-left: 3rem;
 }
-.train1-text p{
+
+.train1-text p {
     text-align: start;
 }
-.train1-text button{
+
+.train1-text button {
     padding: 0.5rem 3rem;
     outline: none;
     border: none;
@@ -161,41 +178,50 @@ height: 70lvh;
     cursor: pointer;
     transition: 1s;
 }
-.train1-text button:hover{
+
+.train1-text button:hover {
     background: #141414;
 }
-.train1-text span .dec1{
+
+.train1-text span .dec1 {
     width: 5rem;
     background: rgb(18, 143, 97);
     height: 5px;
 }
-.dec1{
+
+.dec1 {
     height: 30px;
     background: rgb(18, 143, 97);
-    width:50%;
+    width: 50%;
 }
-.extra{
+
+.extra {
     height: 30vh;
     display: grid;
-    grid-template-columns: repeat(4,auto);
+    grid-template-columns: repeat(4, auto);
 }
-.extra  p,
-.extra h3{
+
+.extra p,
+.extra h3 {
     text-align: start;
     cursor: pointer;
 }
-.socials{
+
+.socials {
     grid-column: span 1;
 
 }
-.contacts{
+
+.contacts {
     grid-column: span 1;
 
 }
-.Plans{
+
+.Plans {
     grid-column: span 1;
-   
+
 }
-.Services{
+
+.Services {
     grid-column: span 1;
 }
